--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
       <fieldset>
         <img
           class="img1"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\veg_fried_rice.jpg"
+          src="veg_fried_rice.jpg"
           alt="Veg Fried Rice"
         />
         <br />
         <img
-          class="img2"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\szechwan_paneer_fried_rice.jpg"
+          class="img2"_rice.jpg
+          src="szechwan_paneer_fried_rice.jpg"
           alt="Szechwan paneer fried rice"
         />
 
@@ -214,13 +214,13 @@
       <fieldset>
         <img
           class="img3"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\veg_noodles.jpg"
+          src="veg_noodles.jpg"
           alt="Veg noodles"
         />
         <br />
         <img
           class="img4"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\manchow_veg_noodles.jpg"
+          src="manchow_veg_noodles.jpg"
           alt="manchow veg noodles"
         />
 
@@ -244,13 +244,13 @@
       <fieldset>
         <img
           class="img5"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\egg_fried_rice.jpg"
+          src="egg_fried_rice.jpg"
           alt="Egg fried rice"
         />
         <br />
         <img
           class="img6"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\prawn-fried-rice.jpg"
+          src="prawn-fried-rice.jpg"
           alt="prawn fried rice"
         />
 
@@ -275,13 +275,13 @@
       <fieldset>
         <img
           class="img7"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\schezwan-eggnoodles.jpg"
+          src="schezwan-eggnoodles.jpg"
           alt="szechwan egg noodles"
         />
         <br />
         <img
           class="img8"
-          src="C:\Users\91630\OneDrive\Desktop\study\coding\web development\project2\shanghai_chicken_noodles.jpg"
+          src="shanghai_chicken_noodles.jpg"
           alt="Sanghai Chicken Noodles"
         />
 
